<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!--    <TextView-->
    <!--      android:layout_width="wrap_content"-->
    <!--      android:layout_height="wrap_content"-->
    <!--      android:text="Hello World!"-->
    <!--      app:layout_constraintBottom_toBottomOf="parent"-->
    <!--      app:layout_constraintStart_toStartOf="parent"-->
    <!--      app:layout_constraintEnd_toEndOf="parent"-->
    <!--      app:layout_constraintTop_toTopOf="parent" />-->


    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="601dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <net.skyscanner.backpack.card.BpkCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:minHeight="48dp"
            app:cornerStyle="large"
            app:elevationLevel="focused"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <net.skyscanner.backpack.text.BpkText
                    style="@style/bpkTextHeading1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Flight_information_card" />
                <net.skyscanner.backpack.text.BpkText
                    style="@style/bpkTextHeading1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:text="@string/Flight_number" />

            </LinearLayout>

        </net.skyscanner.backpack.card.BpkCardView>
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?android:attr/listDivider" />

        <net.skyscanner.backpack.card.BpkCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:minHeight="48dp"
            app:cornerStyle="large"
            app:elevationLevel="focused"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <net.skyscanner.backpack.text.BpkText
                    style="@style/bpkTextHeading1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Departure" />
                <net.skyscanner.backpack.text.BpkText
                    style="@style/bpkTextHeading1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:text="@string/Departure_Three_Digit_Code" />
                <net.skyscanner.backpack.text.BpkText
                    style="@style/bpkTextHeading1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:text="@string/Departure_Time" />
            </LinearLayout>

        </net.skyscanner.backpack.card.BpkCardView>
        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?android:attr/listDivider" />
        <net.skyscanner.backpack.card.BpkCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:minHeight="48dp"
            app:cornerStyle="large"
            app:elevationLevel="focused"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <net.skyscanner.backpack.text.BpkText
                    style="@style/bpkTextHeading1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Arrival_Card" />
                <net.skyscanner.backpack.text.BpkText
                    style="@style/bpkTextHeading1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:text="@string/three_digit_airport_Code" />
                <net.skyscanner.backpack.text.BpkText
                    style="@style/bpkTextHeading1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:text="@string/An_arrival_time" />
            </LinearLayout>

        </net.skyscanner.backpack.card.BpkCardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>